--- a/css/loading-screen-msg.css
+++ b/css/loading-screen-msg.css
@@ -1,5 +1,18 @@
 /* screen - loading-screen-msg */
 
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
+
 .loading-screen-msg {
   align-items: flex-start;
   cursor: pointer;
