--- a/css/indoor-1.css
+++ b/css/indoor-1.css
@@ -5,7 +5,7 @@
   background-color: var(--white);
   display: flex;
   width: 1920px;
-  height: max-height ;
+  transition: max-height .5s linear;
 }
 
 .indoor-1 .overlap-group {
